--- a/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/2Aula_01_Python_para_Data_Science.ipynb
+++ b/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/2Aula_01_Python_para_Data_Science.ipynb
@@ -960,21 +960,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "4xnmTQ9w_ZTi"
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "resultado"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "id": "x6m24TcG_W3w"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NoneType"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(resultado)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1025,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "GlWdnX7Ubgl3"
    },
@@ -1037,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "B6yqoM7KAKKK"
    },
@@ -1045,26 +1058,41 @@
    "source": [
     "def media(lista):\n",
     "  calculo = sum(lista) / len(lista)\n",
-    "  ..."
+    "  return calculo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "GlqPKe3_AT0Q"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "resultado = media(notas)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "E81HZh8rAYJz"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.375"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1085,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "8LmWZ2U9-Zv3"
    },
@@ -1097,58 +1125,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "bJ9KmlHv5o0i"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def boletim(lista):\n",
+    "    media = sum(lista) / len(lista)\n",
+    "  \n",
+    "    if media >= 6:\n",
+    "        situacao = 'Aprovado'\n",
+    "    else:\n",
+    "        situacao = 'Reprovado'\n",
+    "\n",
+    "    return (media, situacao) "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "rIiA2cpB-squ"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6.75, 'Aprovado')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boletim(notas)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "_xf7bR6JBjD8"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "media, situacao = boletim(notas)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "5ixwo3o3CdQ0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.75"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "VFQacFSICeaO"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Aprovado'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "situacao"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "ecFviUvOCgXF"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O(a) estudante atingiu uma média de 6.75 e foi Aprovado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'O(a) estudante atingiu uma média de {media} e foi {situacao}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'O(a) estudante atingiu uma média de {} e foi {}.')"
+    "# a nossa função recebe uma lista do tipo list e retorna uma variável do tipo float\n",
+    "# caso não recebe nenhum valor de parâmetro será passada uma lista com um único\n",
+    "# elemento sendo ele zero\n",
+    "def media(lista: list=[0]) -> float:\n",
+    "  ''' Função para calcular a média de notas passadas por uma lista\n",
+    "\n",
+    "  lista: list, default [0]\n",
+    "    Lista com as notas para calcular a média\n",
+    "  return = calculo: float\n",
+    "    Média calculada\n",
+    "  '''\n",
+    "  calculo = sum(lista) / len(lista)\n",
+    "  return calculo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mSignature:\u001b[39m media(lista: list = [\u001b[32m0\u001b[39m]) -> float\n",
+      "\u001b[31mDocstring:\u001b[39m\n",
+      "Função para calcular a média de notas passadas por uma lista\n",
+      "\n",
+      "lista: list, default [0]\n",
+      "  Lista com as notas para calcular a média\n",
+      "return = calculo: float\n",
+      "  Média calculada\n",
+      "\u001b[31mFile:\u001b[39m      c:\\users\\arthur porto\\appdata\\local\\temp\\ipykernel_4212\\4116398943.py\n",
+      "\u001b[31mType:\u001b[39m      function"
+     ]
+    }
+   ],
+   "source": [
+    "media?"
    ]
   },
   {
@@ -1187,24 +1321,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "4EjJD3w3lbzJ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.5"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Comparando uma função de qualitativo no formato de função para função anônima\n"
+    "# Comparando uma função de qualitativo no formato de função para função anônima\n",
+    "nota = float(input('Digite a nota do(a) estudante: '))\n",
+    "\n",
+    "def qualitativo(x):\n",
+    "    return x + 0.5\n",
+    "\n",
+    "qualitativo(nota)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "vZjaUmaJFp3D"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.5"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Testando a mesma função para uma função lambda\n"
+    "# Testando a mesma função para uma função lambda\n",
+    "nota = float(input('Digite a nota do(a) estudante: '))\n",
+    "\n",
+    "qualitativo = lambda x: x + 0.5\n",
+    "\n",
+    "qualitativo(nota)"
    ]
   },
   {
@@ -1218,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1238,21 +1405,12 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Digite a 1ª nota do(a) estudante: 3\n",
-      "Digite a 2ª nota do(a) estudante: 4\n",
-      "Digite a 3ª nota do(a) estudante: 5\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "Ellipsis"
+       "7.9"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,19 +1421,29 @@
     "N2 = float(input(\"Digite a 2ª nota do(a) estudante: \"))\n",
     "N3 = float(input(\"Digite a 3ª nota do(a) estudante: \"))\n",
     "\n",
-    "..."
+    "media_ponderada = lambda x, y, z: (x * 3 + y * 2 + z * 5) / (2 + 3 + 5)\n",
+    "media_estudante = media_ponderada(N1, N2, N3) \n",
+    "media_estudante"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "Ek1s_FkjkQrW"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O(a) estudante atingiu uma média de 7.9\n"
+     ]
+    }
+   ],
    "source": [
     "# Exibindo a média\n",
-    "print(f'O(a) estudante atingiu uma média de {}')"
+    "print(f'O(a) estudante atingiu uma média de {media_estudante}')"
    ]
   },
   {
@@ -1312,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "RdoaWhuVI_OB"
    },
@@ -1325,23 +1493,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "nC6zW89lHI4K"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate list (not \"float\") to list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m notas_atualizadas = \u001b[38;5;28;01mlambda\u001b[39;00m x: x + qualitativo\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mnotas_atualizadas\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnotas\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 1\u001b[39m, in \u001b[36m<lambda>\u001b[39m\u001b[34m(x)\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m notas_atualizadas = \u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[43mqualitativo\u001b[49m\n\u001b[32m      2\u001b[39m notas_atualizadas(notas)\n",
+      "\u001b[31mTypeError\u001b[39m: can only concatenate list (not \"float\") to list"
+     ]
+    }
+   ],
+   "source": [
+    "notas_atualizadas = lambda x: x + qualitativo\n",
+    "notas_atualizadas(notas)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "id": "iM2jXtC8m1zc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6.5, 7.5, 9.5, 6.0, 8.5]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Não conseguimos aplicar o lambda em listas direto, é necessário \n",
-    "# utilizarmos junto a ela a função map\n"
+    "# utilizarmos junto a ela a função map\n",
+    "notas_atualizadas = map(lambda x: x + qualitativo, notas)\n",
+    "list(notas_atualizadas)"
    ]
   },
   {
