--- a/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Hora da prática.ipynb
+++ b/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Hora da prática.ipynb
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "id": "1nbQ-hIRa1d0"
    },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "id": "5Bx-K65ya1d0"
    },
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {
     "id": "VQyaLsnWa1d0"
    },
@@ -907,20 +907,23 @@
     }
    ],
    "source": [
+    "# 1) Constantes\n",
     "DIARIA_HOTEL = 150\n",
     "CONSUMO_KM_L = 14\n",
     "PRECO_LITRO = 5\n",
     "\n",
-    "def gasto_hotel (dias):\n",
-    "    return diaria_hotel*dias\n",
+    "# 2) Funções puras (sem I/O)\n",
+    "def gasto_hotel(dias):\n",
+    "    return DIARIA_HOTEL * dias\n",
     "\n",
-    "def gasto_gasolina (kms):\n",
-    "    litros = 2*kms/consumo_km_l\n",
-    "    return litros * preco_litro\n",
+    "def gasto_gasolina(kms):\n",
+    "    litros = 2 * kms / CONSUMO_KM_L\n",
+    "    return litros * PRECO_LITRO\n",
     "\n",
-    "def gasto_passeio (gastos, dias):\n",
-    "    return gastos*dias\n",
+    "def gasto_passeio(gastos, dias):\n",
+    "    return gastos * dias\n",
     "\n",
+    "# 3) Dados estáticos e derivados\n",
     "cidades = [\"Salvador\", \"Fortaleza\", \"Natal\", \"Aracaju\"]\n",
     "gastos = [200, 400, 250, 300]\n",
     "kms = [850, 800, 300, 550]\n",
@@ -929,18 +932,19 @@
     "    for cidade, km, gasto in zip(cidades, kms, gastos)\n",
     "}\n",
     "\n",
+    "# 4) Fluxo do script (I/O, validação, impressão)\n",
     "destino = input('Você vai viajar para qual localização?').strip().title()\n",
-    "if destino in DADOS:\n",
-    "    info = DADOS[destino]\n",
-    "    gasto_destino = info[\"gasto_dia\"]\n",
-    "    km_destino = info[\"km\"]\n",
-    "else:\n",
+    "info = DADOS.get(destino)\n",
+    "if info is None:\n",
     "    print(\"Destino inválido. Opções:\", \", \".join(DADOS.keys()))\n",
     "    raise SystemExit\n",
     "\n",
     "dias = int(input('Por quantos dias?'))\n",
+    "gasto_h = gasto_hotel(dias)\n",
+    "gasto_g = gasto_gasolina(info[\"km\"])\n",
+    "gasto_p = gasto_passeio(info[\"gasto_dia\"], dias)\n",
     "\n",
-    "gasto_total = gasto_hotel(dias) + gasto_gasolina(km_destino) + gasto_passeio(gasto_destino, dias)\n",
+    "gasto_total = gasto_h + gasto_g + gasto_p\n",
     "\n",
     "print(f\"Com base nos gastos definidos, uma viagem de {dias} dias para {destino} saindo de Recife custaria R$ {gasto_total:.2f} reais\")\n"
    ]
@@ -962,21 +966,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {
     "id": "_WxPiZWtpWoX"
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "RNKCIcDJeBsX"
-   },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Aprender', 'Python', 'Alura', 'muito']"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frase = 'Aprender Python aqui na Alura é muito bom'\n",
+    "def tratar_frase (x):\n",
+    "    x = x.replace(',', ' ')\n",
+    "    x = x.replace('.', ' ')\n",
+    "    x = x.replace('!', ' ')\n",
+    "    x = x.replace('?', ' ')\n",
+    "    return x.split()\n",
+    "# frase = frase.replace(',', ' ').replace('.', ' ').replace('!', ' ').replace('?', ' ').split()\n",
+    "# palavras = [x for x in frase if len(x) >= 5]\n",
+    "palavras = tratar_frase(frase)\n",
+    "palavras = list(filter(lambda x: len(x) >= 5, palavras))\n",
+    "palavras\n"
+   ]
   },
   {
    "cell_type": "markdown",
