Atualização das pastas deaula duplicadas e ultimas atividades

--- a/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Python_para_Data_Science.ipynb
+++ b/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Python_para_Data_Science.ipynb
@@ -6,7 +6,7 @@
     "id": "AGc2Cf4cBwd7"
    },
    "source": [
-    "# <font color=green> PYTHON PARA DATA SCIENCE\n",
+    "<font color=green> PYTHON PARA DATA SCIENCE\n",
     "---"
    ]
   },
@@ -16,7 +16,7 @@
     "id": "fH2br9y9CYZ8"
    },
    "source": [
-    "## <font color=green> 1. BIBLIOTECAS\n",
+    "# <font color=green> 1. BIBLIOTECAS\n",
     "---"
    ]
   },
@@ -458,7 +458,7 @@
     "id": "2hrSPmlcBwWS"
    },
    "source": [
-    "## <font color=green> 2. FUNÇÕES\n",
+    "# <font color=green> 2. FUNÇÕES\n",
     "---"
    ]
   },
@@ -2019,7 +2019,7 @@
     "id": "DoB6wf2JCYf7"
    },
    "source": [
-    "## <font color=green> 3. ESTRUTURA DE DADOS COMPOSTAS\n",
+    "# <font color=green> 3. ESTRUTURA DE DADOS COMPOSTAS\n",
     "---"
    ]
   },
@@ -2243,11 +2243,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "aRB0zQ2_6aa9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['João', 'Maria', 'José', 'Cláudia', 'Ana']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "estudantes = [\"João\", \"Maria\", \"José\", \"Cláudia\", \"Ana\"]\n",
     "estudantes"
@@ -2255,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "wFHkckyg6aa-"
    },
@@ -2269,12 +2280,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "tZItNHeo6aa-"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('João', 'J764'),\n",
+       " ('Maria', 'M148'),\n",
+       " ('José', 'J968'),\n",
+       " ('Cláudia', 'C911'),\n",
+       " ('Ana', 'A757')]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "codigo_estudantes = []\n",
+    "\n",
+    "# for i in range(len(estudantes)):\n",
+    "#     codigo_estudantes.append((estudantes [i], estudantes[i][0] + gera_codigo()))\n",
+    "\n",
+    "codigo_estudantes = [(estudante, estudante[0] + gera_codigo()) for estudante in estudantes]\n",
+    "codigo_estudantes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2315,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "RR5D3LvYAOUd"
    },
@@ -2326,7 +2360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "J_atQRQdlpNe"
    },
@@ -2348,12 +2382,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "G5CQqPkzQWT0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9.0, 7.3, 5.8, 6.7, 8.5]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "medias = [round(media(nota),1) for nota in notas]\n",
+    "medias"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2377,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "id": "WhXegkP5DDMW"
    },
@@ -2389,13 +2437,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "id": "Lvfr10SIDSDN"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['João', 'Maria', 'José', 'Cláudia', 'Ana']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Gerando a lista de nomes (extraindo da tupla)\n"
+    "# Gerando a lista de nomes (extraindo da tupla)\n",
+    "nomes = [nome[0] for nome in nomes]\n",
+    "nomes"
    ]
   },
   {
@@ -2411,22 +2472,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "TRqn0wMUg3s7"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('João', 9.0), ('Maria', 7.3), ('José', 5.8), ('Cláudia', 6.7), ('Ana', 8.5)]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estudantes = list(zip(nomes, medias))\n",
+    "estudantes"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "id": "T1ocZ1G0g3qC"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('João', 9.0), ('Ana', 8.5)]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Gerando a lista de pessoas candidatas a bolsa\n"
+    "# Gerando a lista de pessoas candidatas a bolsa\n",
+    "candidatos = [(estudante[0], estudante[1]) for estudante in estudantes if estudante[1] >= 8]\n",
+    "candidatos"
    ]
   },
   {
@@ -2605,7 +2693,7 @@
     "id": "RxKC5WVoCYp3"
    },
    "source": [
-    "## <font color=green> 4. LIDANDO COM EXCEÇÕES\n",
+    "# <font color=green> 4. LIDANDO COM EXCEÇÕES\n",
     "---"
    ]
   },
