Mais exercícios e mais 1 capítulo Alura concluído

--- a/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Hora da prática.ipynb
+++ b/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Hora da prática.ipynb
@@ -1031,12 +1031,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "P9dywp1xh3SU"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[24, 10, 16]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_de_listas = [[4,6,5,9], [1,0,7,2], [3,4,1,8]]\n",
+    "soma_listas = [sum(lista) for lista in lista_de_listas]\n",
+    "soma_listas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1054,12 +1069,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "S9EL1Bvjh3SU"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[81, 67, 83]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_de_tuplas = [('Pedro', 1.74, 81), ('Júlia', 1.65, 67), ('Otávio', 1.81, 83)]\n",
+    "terceiro_elemento = [tupla[2] for tupla in lista_de_tuplas]\n",
+    "terceiro_elemento"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1073,12 +1103,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "x3ckJThph3SU"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'Pedro'), (1, 'Júlia'), (2, 'Otávio'), (3, 'Eduardo')]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista = ['Pedro', 'Júlia', 'Otávio', 'Eduardo']\n",
+    "# tuplas = [(i, nome) for i, nome in enumerate(lista)]\n",
+    "tuplas = list(enumerate(lista))\n",
+    "tuplas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1096,12 +1142,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "id": "H1S8yT64h3SU"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1700, 1400, 1900]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aluguel = [('Apartamento', 1700), ('Apartamento', 1400), ('Casa', 2150), ('Apartamento', 1900), ('Casa', 1100)]\n",
+    "lista = [valor for tipo, valor in aluguel if tipo == 'Apartamento']\n",
+    "lista"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1117,12 +1178,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "id": "y7c5ickkh3SV"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jan': 860,\n",
+       " 'Fev': 490,\n",
+       " 'Mar': 1010,\n",
+       " 'Abr': 780,\n",
+       " 'Mai': 900,\n",
+       " 'Jun': 630,\n",
+       " 'Jul': 590,\n",
+       " 'Ago': 770,\n",
+       " 'Set': 620,\n",
+       " 'Out': 560,\n",
+       " 'Nov': 840,\n",
+       " 'Dez': 360}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meses = ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez']\n",
+    "despesa = [860, 490, 1010, 780, 900, 630, 590, 770, 620, 560, 840, 360]\n",
+    "\n",
+    "despesas_mensais = {m: d for m, d in zip(meses, despesa)}\n",
+    "despesas_mensais"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1150,12 +1239,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "id": "jQvbtw2sh3SV"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8883, 7688, 9544, 8190]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vendas = [('2023', 4093), ('2021', 4320), ('2021', 5959), ('2022', 8883), ('2023', 9859), ('2022', 5141), ('2022', 7688), ('2022', 9544), ('2023', 4794), ('2021', 7178), ('2022', 3030), ('2021', 7471), ('2022', 4226), ('2022', 8190), ('2021', 9680), ('2022', 5616)]\n",
+    "dados_2022 = [valor for ano, valor in vendas if ano == '2022' and valor > 6000]\n",
+    "dados_2022"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1181,12 +1285,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "id": "cIDqBZrxh3SV"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Diabetes', 129),\n",
+       " ('Normal', 82),\n",
+       " ('Hipoglicemia', 60),\n",
+       " ('Normal', 97),\n",
+       " ('Alterada', 101),\n",
+       " ('Hipoglicemia', 65),\n",
+       " ('Hipoglicemia', 62),\n",
+       " ('Diabetes', 167),\n",
+       " ('Normal', 87),\n",
+       " ('Hipoglicemia', 53),\n",
+       " ('Hipoglicemia', 58),\n",
+       " ('Normal', 92),\n",
+       " ('Hipoglicemia', 66),\n",
+       " ('Alterada', 120),\n",
+       " ('Alterada', 109),\n",
+       " ('Hipoglicemia', 62),\n",
+       " ('Normal', 86),\n",
+       " ('Normal', 96),\n",
+       " ('Alterada', 103),\n",
+       " ('Normal', 88),\n",
+       " ('Diabetes', 155),\n",
+       " ('Hipoglicemia', 52),\n",
+       " ('Normal', 89),\n",
+       " ('Normal', 73)]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glicemia = [129, 82, 60, 97, 101, 65, 62, 167, 87, 53, 58, 92, 66, 120, 109, 62, 86, 96, 103, 88, 155, 52, 89, 73]\n",
+    "glicose = [('Hipoglicemia', g) if g <= 70 else ('Normal', g) if 70 < g <= 99 else ('Alterada', g) if 99 < g <= 125 else ('Diabetes', g) for g in glicemia]\n",
+    "glicose"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1211,11 +1353,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('ID', 'Quantidade', 'Preço', 'Valor Total'),\n",
+       " (0, 15, 93.0, 1395.0),\n",
+       " (1, 12, 102.0, 1224.0),\n",
+       " (2, 1, 18.0, 18.0),\n",
+       " (3, 15, 41.0, 615.0),\n",
+       " (4, 2, 122.0, 244.0),\n",
+       " (5, 11, 14.0, 154.0),\n",
+       " (6, 2, 71.0, 142.0),\n",
+       " (7, 12, 48.0, 576.0),\n",
+       " (8, 2, 14.0, 28.0),\n",
+       " (9, 4, 144.0, 576.0)]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "id = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "quantidade = [15, 12, 1, 15, 2, 11, 2, 12, 2, 4]\n",
+    "preco = [93.0, 102.0, 18.0, 41.0, 122.0, 14.0, 71.0, 48.0, 14.0, 144.0]\n",
+    "tuplas = [(id, quantidade, preco, preco * quantidade) for id, quantidade, preco, valor_total in zip(id, quantidade, preco, valor_total)]\n",
+    "tuplas = [('ID', 'Quantidade', 'Preço', 'Valor Total')] + tuplas\n",
+    "tuplas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {
     "id": "XnmvwiIwh3SV"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('ID', 'Quantidade', 'Preço', 'Valor Total'),\n",
+       " (0, 15, 93.0, 1395.0),\n",
+       " (1, 12, 102.0, 1224.0),\n",
+       " (2, 1, 18.0, 18.0),\n",
+       " (3, 15, 41.0, 615.0),\n",
+       " (4, 2, 122.0, 244.0),\n",
+       " (5, 11, 14.0, 154.0),\n",
+       " (6, 2, 71.0, 142.0),\n",
+       " (7, 12, 48.0, 576.0),\n",
+       " (8, 2, 14.0, 28.0),\n",
+       " (9, 4, 144.0, 576.0)]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "quantidade = [15, 12, 1, 15, 2, 11, 2, 12, 2, 4]\n",
+    "preco = [93.0, 102.0, 18.0, 41.0, 122.0, 14.0, 71.0, 48.0, 14.0, 144.0]\n",
+    "tuplas = [(id, quantidade, preco, preco * quantidade) for id, quantidade, preco in zip(id, quantidade, preco)]\n",
+    "tuplas = [('ID', 'Quantidade', 'Preço', 'Valor Total')] + tuplas\n",
+    "tuplas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1241,8 +1445,23 @@
    "metadata": {
     "id": "qXU5UMUih3SV"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ES', 'MG', 'RJ', 'SP'}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estados = ['SP', 'ES', 'MG', 'MG', 'SP', 'MG', 'ES', 'ES', 'ES', 'SP', 'SP', 'MG', 'ES', 'SP', 'RJ', 'MG', 'RJ', 'SP', 'MG', 'SP', 'ES', 'SP', 'MG']\n",
+    "filiais = {estado: estados.count(estado) for estado in set(estados)}\n",
+    "filiais"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1266,11 +1485,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "lq42ThQNh3SV"
-   },
-   "outputs": [],
-   "source": []
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'SP': [16, 10, 7, 11, 9, 12, 7, 10], 'ES': [8, 9, 7, 12, 8, 14], 'MG': [9, 6, 4, 8, 5, 10, 12], 'RJ': [13, 9]} \n",
+      " {'SP': 82, 'ES': 58, 'MG': 54, 'RJ': 22}\n"
+     ]
+    }
+   ],
+   "source": [
+    "funcionarios = [('SP', 16), ('ES', 8), ('MG', 9), ('MG', 6), ('SP', 10), ('MG', 4), ('ES',9), ('ES', 7), ('ES', 12), ('SP', 7), ('SP', 11), ('MG',8), ('ES',8), ('SP',9), ('RJ', 13), ('MG', 5), ('RJ', 9), ('SP', 12), ('MG', 10), ('SP', 7), ('ES', 14), ('SP', 10), ('MG', 12)]\n",
+    "\n",
+    "# Passo 1 - Dicionário com listas com os numeros dos funcionarios\n",
+    "dicio_lista = {}\n",
+    "for estado, funcionario in funcionarios:\n",
+    "    dicio_lista.setdefault(estado, []).append(funcionario)\n",
+    "\n",
+    "# Passo 2 - Dicionário com totais\n",
+    "dicio_somas = {UF: sum(colab) for UF, colab in dicio_lista.items()}\n",
+    "print(dicio_lista, '\\n', dicio_somas)\n"
+   ]
   },
   {
    "cell_type": "markdown",
