--- a/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Python_para_Data_Science.ipynb
+++ b/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Python_para_Data_Science.ipynb
@@ -2547,7 +2547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "-QlKML-tG6FN"
    },
@@ -2564,8 +2564,22 @@
    "metadata": {
     "id": "qYgaZthjQWQV"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "situacao = ['Aprovado' if media >= 6 else 'Reprovado' for media in medias]\n",
+    "situacao"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2581,12 +2595,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "G-AEgh4NGlvH"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(('João', 'J720'), [8.0, 9.0, 10.0], 9.0, 'Aprovado'),\n",
+       " (('Maria', 'M205'), [9.0, 7.0, 6.0], 7.3, 'Aprovado'),\n",
+       " (('José', 'J371'), [3.4, 7.0, 7.0], 5.8, 'Reprovado'),\n",
+       " (('Cláudia', 'C546'), [5.5, 6.6, 8.0], 6.7, 'Aprovado'),\n",
+       " (('Ana', 'A347'), [6.0, 10.0, 9.5], 8.5, 'Aprovado')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_completa = list(zip(nomes, notas, medias, situacao))\n",
+    "lista_completa"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2650,7 +2682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "fD_TeWtOUQKQ"
    },
@@ -2664,27 +2696,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "xFkmjd4EKG7b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Notas': [[8.0, 9.0, 10.0],\n",
+       "  [9.0, 7.0, 6.0],\n",
+       "  [3.4, 7.0, 7.0],\n",
+       "  [5.5, 6.6, 8.0],\n",
+       "  [6.0, 10.0, 9.5]],\n",
+       " 'Média Final': [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+       " 'Situação': ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado']}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Colunas com os tipos dos dados (exceto nome)\n",
     "coluna = [\"Notas\", \"Média Final\", \"Situação\"]\n",
-    "\n",
-    "..."
+    "cadastro = {coluna[i]: lista_completa[i+1] for i in range(len(coluna))}\n",
+    "cadastro"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "yDPfgllCKVrt"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Notas': [[8.0, 9.0, 10.0],\n",
+       "  [9.0, 7.0, 6.0],\n",
+       "  [3.4, 7.0, 7.0],\n",
+       "  [5.5, 6.6, 8.0],\n",
+       "  [6.0, 10.0, 9.5]],\n",
+       " 'Média Final': [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+       " 'Situação': ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado'],\n",
+       " 'Estudante': ['João', 'Maria', 'José', 'Cláudia', 'Ana']}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Vamos por fim adicionar o nome dos estudantes, extraindo apenas seus nomes da lista de tuplas\n"
+    "# Vamos por fim adicionar o nome dos estudantes, extraindo apenas seus nomes da lista de tuplas\n",
+    "cadastro['Estudante'] = [lista_completa[0][i][0] for i in range(len(lista_completa[0]))]\n",
+    "cadastro\n"
    ]
   },
   {
