Base de Dados para o Tech Challenge Data Analysis 11DTA FIAP

--- a/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Python_para_Data_Science.ipynb
+++ b/alura/python-para-data-science/2-funções-estruturas-de-dados-e-exceções/Python_para_Data_Science.ipynb
@@ -2833,7 +2833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "PkMmeYxaDcIF"
    },
@@ -2849,26 +2849,68 @@
    "metadata": {
     "id": "AudrLS-BGGEy"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Afonso'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m nome = \u001b[38;5;28minput\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mDigite o nome do estudante: \u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m resultado = \u001b[43mnotas\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnome\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m      3\u001b[39m resultado\n",
+      "\u001b[31mKeyError\u001b[39m: 'Afonso'"
+     ]
+    }
+   ],
+   "source": [
+    "nome = input('Digite o nome do estudante: ')\n",
+    "resultado = notas[nome]\n",
+    "resultado"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "NEX6RRX7Wb0Y"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'KeyError'> Erro: 'Afonso'\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    nome = input('Digite o nome do estudante: ')\n",
+    "    resultado = notas[nome]\n",
+    "except Exception as e:\n",
+    "    print(type(e), f'Erro: {e}')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "3oV8Bw-NGGiu"
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estudante não matriculado na turma\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    nome = input('Digite o nome do estudante: ')\n",
+    "    resultado = notas[nome]\n",
+    "except KeyError:\n",
+    "    print('Estudante não matriculado na turma')"
+   ]
   },
   {
    "cell_type": "markdown",
